# webrify

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/turnstile-core/: Cargo.toml
crates/turnstile-core/src/: behavior.rs  fingerprint.rs  lib.rs  pow.rs  protocol.rs  risk.rs  rng.rs
crates/turnstile-server/: Cargo.toml  build.rs
crates/turnstile-server/src/: cli.rs  config.rs  error.rs  extract.rs  hmac.rs  jwt.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  state.rs  store.rs
crates/turnstile-server/src/routes/: challenge.rs  demo.rs  health.rs  metrics.rs  mod.rs  siteverify.rs  verify.rs  widget.rs
crates/turnstile-server/tests/: integration.rs
crates/turnstile-wasm/: Cargo.toml
crates/turnstile-wasm/src/: lib.rs
demo/: index.html  package-lock.json  package.json
demo/public/widget/assets/: pow-worker-Bi7l--r_.js
demo/src/: App.jsx
demo2/: index.html  package-lock.json  package.json
demo2/src/: App.jsx
docs/: integration-guide.md  operations.md  poW-captcha-research-report.md  pow.md  proposal.md  research-report.md  roadmap.md
scripts/: build-release.sh  docker-build.sh
