[package]
name = "turnstile-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for the Webrify Turnstile client engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
turnstile-core = { path = "../turnstile-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
hex = "0.4"
# Phase 2 (fingerprinting): serde, serde-wasm-bindgen, js-sys, web-sys
